# cxxalg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/cxxalg/: any.hxx  optional.hxx  variant.hxx
include/cxxalg/impl/: common.hxx
test/: CMakeLists.txt  any_test.cxx  any_test.hxx  main.cxx  optional_test.cxx  optional_test.hxx  variant_test.cxx  variant_test.hxx
